Add new glitchtip-project-alerts-api integration
